--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
 	    <artifactId>poi-ooxml</artifactId>
 	    <version>3.17</version>
 	</dependency>
-	
+	<!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
+	<dependency>
+	    <groupId>com.googlecode.json-simple</groupId>
+	    <artifactId>json-simple</artifactId>
+	    <version>1.1.1</version>
+	</dependency>
 </dependencies>
 </project>
